tests/snapshots/analyze__basic.snap
---
source: tests/analyze.rs
assertion_line: 73
expression: "String::from_utf8(output.stdout).unwrap()"
---

test_mov_function

+---------------+
|    enter:     |
| {rsp}         |
| mov _x, 1     |
| {rsp, _x}     |
| mov _y, 2     |
| {rsp, _x, _y} |
| mov _z, _x    |
| {rsp, _y, _z} |
| add _z, _y    |
| {rsp}         |
| mov _z, 7     |
| {rsp, _z}     |
| mov _x, _z    |
| {rsp, _x}     |
| call _x       |
| {rsp}         |
| jmp exit      |
| {rsp}         |
+---------------+
  |
  |
  v
+---------------+
|     exit:     |
| {rsp}         |
| ret           |
| {}            |
+---------------+

