tests/snapshots/analyze__clobber_across_div-2.snap
---
source: tests/analyze.rs
assertion_line: 137
expression: live_ranges
---
rsp              enter:
┊                mov _x, 1
┊   _x           mov _y, 2
┊   ●   _y       mov rax, _x
┊   rax ┊        cqo
┊   ┊   ┊   rdx  idiv 5
┊   ┊   D   ┊    mov rdx, _y
┊   ┊       ┊    jmp exit
┊   ┊       ┊    exit:
D   D       D    ret

