tests/snapshots/analyze__clobber_across_div.snap
---
source: tests/analyze.rs
assertion_line: 137
expression: live_variables
---

  clobber_across_div

+---------------------+
|       enter:        |
| {rsp}               |
| mov _x, 1           |
| {rsp, _x}           |
| mov _y, 2           |
| {rsp, _x, _y}       |
| mov rax, _x         |
| {rax, rsp, _y}      |
| cqo                 |
| {rax, rdx, rsp, _y} |
| idiv 5              |
| {rax, rsp, _y}      |
| mov rdx, _y         |
| {rax, rdx, rsp}     |
| jmp exit            |
| {rax, rdx, rsp}     |
+---------------------+
  |
  |
  v
+---------------------+
|        exit:        |
| {rax, rdx, rsp}     |
| ret                 |
| {}                  |
+---------------------+

