tests/snapshots/analyze__clobber_across_hul-2.snap
---
source: tests/analyze.rs
assertion_line: 149
expression: live_ranges
---
rsp              enter:
┊                  mov _x, 1
┊   _x             mov _y, 2
┊   ●   _y         mov rax, _x
┊   rax ┊          imul 5
┊   ┊   A   rdx    mov rax, _y
┊   ┊       |      jmp exit
┊   ┊       |    exit:
A   A       ●      ret

